--- a/package.json
+++ b/package.json
@@ -12,5 +12,6 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-penthouse": "^0.3.0",
     "grunt-postcss": "^0.8.0"
-  }
+  },
+  "dependencies": {}
 }
