--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-penthouse": "^0.3.0",
-    "grunt-postcss": "^0.8.0"
+    "grunt-postcss": "^0.8.0",
+    "grunt-svg2png": "^0.2.7",
+    "grunt-svgmin": "^3.2.0",
+    "grunt-svgstore": "^1.0.0"
   },
   "dependencies": {}
 }
