--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "base-site",
   "version": "0.1.0",
   "devDependencies": {
+    "autoprefixer": "^6.3.7",
+    "cssnano": "^3.7.1",
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-imagemin": "^1.0.1",
@@ -14,7 +16,8 @@
     "grunt-postcss": "^0.8.0",
     "grunt-svg2png": "^0.2.7",
     "grunt-svgmin": "^3.2.0",
-    "grunt-svgstore": "^1.0.0"
+    "grunt-svgstore": "^1.0.0",
+    "pixrem": "^3.0.1"
   },
   "dependencies": {}
 }
