--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-favicons": "^0.8.0",
     "grunt-penthouse": "^0.3.0",
     "grunt-postcss": "^0.8.0",
     "grunt-svg2png": "^0.2.7",
