--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "base-site",
   "version": "0.1.0",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "pixrem": "^3.0.1",
     "autoprefixer": "^6.3.7",
     "cssnano": "^3.7.1",
+    "grunt": "^0.4.5",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-imagemin": "^1.0.1",
     "grunt-contrib-jshint": "~0.10.0",
@@ -19,7 +18,8 @@
     "grunt-svg2png": "^0.2.7",
     "grunt-svgmin": "^3.2.0",
     "grunt-svgstore": "^1.0.0",
-    "grunt-text-replace": "^0.4.0"
+    "grunt-text-replace": "^0.4.0",
+    "pixrem": "^3.0.1"
   },
   "dependencies": {}
 }
