--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-criticalcss": "^1.0.2",
     "grunt-favicons": "^0.8.0",
-    "grunt-penthouse": "^0.3.0",
     "grunt-postcss": "^0.8.0",
     "grunt-svg2png": "^0.2.7",
     "grunt-svgmin": "^3.2.0",
