--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cssnano": "^3.7.1",
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-imagemin": "^1.0.1",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "^0.4.1",
