--- a/package.json
+++ b/package.json
@@ -2,25 +2,25 @@
   "name": "base-site",
   "version": "0.1.0",
   "devDependencies": {
-    "autoprefixer": "^6.3.7",
-    "cssnano": "^3.7.1",
+    "autoprefixer": "^6.5.1",
+    "cssnano": "^3.7.7",
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-imagemin": "^1.0.1",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-nodeunit": "^0.4.1",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-nodeunit": "^1.0.0",
     "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-criticalcss": "^1.0.2",
+    "grunt-criticalcss": "^2.1.0",
     "grunt-favicons": "^0.8.0",
     "grunt-postcss": "^0.8.0",
     "grunt-svg2png": "^0.2.7",
-    "grunt-svgmin": "^3.2.0",
+    "grunt-svgmin": "^4.0.0",
     "grunt-svgstore": "^1.0.0",
     "grunt-text-replace": "^0.4.0",
-    "pixrem": "^3.0.1"
+    "pixrem": "^3.0.2"
   },
   "dependencies": {}
 }
