--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "base-site",
   "description": "Grunt task runner for rapid deployment of static PHP sites",
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/makingmerry/base-site"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/makingmerry/base-site"
   },
   "license": "UNLICENSED",
-  "version": "1.0.15",
-  "dependencies": {
+  "version": "1.1.1",
+  "devDependencies": {
     "autoprefixer": "^6.5.1",
     "breakpoint-sass": "^2.7.1",
     "cssnano": "^3.7.7",
@@ -27,6 +27,8 @@
     "grunt-svgmin": "^4.0.0",
     "grunt-svgstore": "^1.0.0",
     "grunt-text-replace": "^0.4.0",
-    "pixrem": "^3.0.2"
+    "pixrem": "^3.0.2",
+    "babel-preset-es2015": "^6.24.1",
+    "grunt-babel": "^6.0.0"
   }
 }
