--- a/package.json
+++ b/package.json
@@ -6,12 +6,23 @@
     "url": "https://github.com/makingmerry/base-site"
   },
   "license": "UNLICENSED",
-  "version": "1.1.1",
+  "version": "1.1.2",
+  "babel": {
+    "presets": [
+      "es2015"
+    ],
+    "plugins": [
+      "transform-remove-strict-mode"
+    ]
+  },
   "devDependencies": {
     "autoprefixer": "^6.5.1",
+    "babel-plugin-transform-remove-strict-mode": "0.0.2",
+    "babel-preset-es2015": "^6.24.1",
     "breakpoint-sass": "^2.7.1",
     "cssnano": "^3.7.7",
     "grunt": "^0.4.5",
+    "grunt-babel": "^6.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-imagemin": "^1.0.1",
@@ -27,8 +38,6 @@
     "grunt-svgmin": "^4.0.0",
     "grunt-svgstore": "^1.0.0",
     "grunt-text-replace": "^0.4.0",
-    "pixrem": "^3.0.2",
-    "babel-preset-es2015": "^6.24.1",
-    "grunt-babel": "^6.0.0"
+    "pixrem": "^3.0.2"
   }
 }
