--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "url": "https://github.com/makingmerry/base-site"
   },
   "license": "UNLICENSED",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "babel": {
     "presets": [
       "es2015"
@@ -32,8 +32,8 @@
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-criticalcss": "^2.1.0",
-    "grunt-favicons": "^0.8.0",
     "grunt-postcss": "^0.8.0",
+    "grunt-real-favicon": "^0.2.0",
     "grunt-svg2png": "^0.2.7",
     "grunt-svgmin": "^4.0.0",
     "grunt-svgstore": "^1.0.0",
