--- a/package.json
+++ b/package.json
@@ -3,17 +3,30 @@
   "description": "Grunt task runner for rapid deployment of static PHP sites",
   "repository": {
     "type": "git",
-    "url": "https://github.com/makingmerry/base-site"
+    "url": "https://github.com/makingmerry/base-site",
   },
   "license": "UNLICENSED",
-  "version": "1.1.9",
+  "version": "1.1.10",
   "babel": {
     "presets": [
-      "es2015"
+      "es2015" 
     ],
     "plugins": [
       "transform-remove-strict-mode"
-    ]
+    ],
+  },
+  "eslintConfig": {
+    "extends": "airbnb",
+    "env": {
+      "browser": true,
+      "es6": true,
+    },
+    "rules": {
+      "spaced-comment": ["error", "always", {
+        "markers": ["/"],
+        "exceptions": ["///"],
+      }]
+    }
   },
   "devDependencies": {
     "autoprefixer": "^6.5.1",
@@ -21,23 +34,28 @@
     "babel-preset-es2015": "^6.24.1",
     "breakpoint-sass": "^2.7.1",
     "cssnano": "^3.7.7",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1",
     "grunt": "^0.4.5",
     "grunt-babel": "^6.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-imagemin": "^1.0.1",
-    "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-nodeunit": "^1.0.0",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-criticalcss": "^2.1.0",
+    "grunt-eslint": "^19.0.0",
     "grunt-postcss": "^0.8.0",
     "grunt-real-favicon": "^0.2.0",
     "grunt-svg2png": "^0.2.7",
     "grunt-svgmin": "^4.0.0",
     "grunt-svgstore": "^1.0.0",
     "grunt-text-replace": "^0.4.0",
-    "pixrem": "^3.0.2"
+    "pixrem": "^3.0.2",
   }
 }
