[1.1.12] update media grunt tasks

--- a/.gitignore
+++ b/.gitignore
@@ -30,9 +30,9 @@
   !images/
     images/*
     !images/src/
-  !svgs/
-    svgs/*
-    !svgs/src/
+  !icons/
+    icons/*
+    !icons/src/
   !favicons/
     favicons/*
     !favicons/src/
