--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "url": "https://github.com/makingmerry/base-site"
   },
   "license": "UNLICENSED",
-  "version": "1.1.12",
+  "version": "1.1.13",
   "babel": {
     "presets": [
       "es2015"
@@ -31,7 +31,7 @@
           ]
         }
       ]
-    }
+    },
   },
   "devDependencies": {
     "autoprefixer": "^6.5.1",
@@ -58,6 +58,6 @@
     "grunt-real-favicon": "^0.2.0",
     "grunt-svg-sprite": "^1.3.7",
     "grunt-svg2png": "^0.2.7",
-    "pixrem": "^3.0.2"
-  }
+    "pixrem": "^3.0.2",
+  },
 }
