--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "url": "https://github.com/makingmerry/base-site"
   },
   "license": "UNLICENSED",
-  "version": "1.1.14",
+  "version": "1.1.15",
   "babel": {
     "presets": [
       "es2015"
@@ -19,14 +19,22 @@
       "es6": true
     },
     "rules": {
-      "spaced-comment": ["error", "always", {
-        "markers": ["/"],
-        "exceptions": ["///"]
-      }]
+      "spaced-comment": [
+        "error",
+        "always",
+        {
+          "markers": [
+            "/"
+          ],
+          "exceptions": [
+            "///"
+          ]
+        }
+      ]
     }
   },
   "devDependencies": {
-    "autoprefixer": "^6.5.1",
+    "autoprefixer": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "breakpoint-sass": "^2.7.1",
     "cssnano": "^3.7.7",
@@ -35,14 +43,14 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
-    "grunt": "^0.4.5",
+    "grunt": "^1.0.1",
     "grunt-babel": "^6.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-imagemin": "^1.0.1",
     "grunt-contrib-nodeunit": "^1.0.0",
     "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-uglify": "^2.0.0",
+    "grunt-contrib-uglify": "^3.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-criticalcss": "^2.1.0",
     "grunt-eslint": "^19.0.0",
