--- a/.gitignore
+++ b/.gitignore
@@ -22,20 +22,22 @@
 
   # track source assets and templates
   ----------
-  !fonts/*
-  !sass/*
-  !javascripts/
-    javascripts/*
-    !javascripts/src/
-  !images/
-    images/*
-    !images/src/
-  !icons/
-    icons/*
-    !icons/src/
-  !favicons/
-    favicons/*
-    !favicons/src/
+  !assets/
+    assets/*
+    !assets/fonts/*
+    !assets/sass/*
+    !assets/javascripts/
+      assets/javascripts/*
+      !assets/javascripts/src/
+    !assets/images/
+      assets/images/*
+      !assets/images/src/
+    !assets/icons/
+      assets/icons/*
+      !assets/icons/src/
+    !assets/favicons/
+      assets/favicons/*
+      !assets/favicons/src/
   !snippets/
   !*.php
 
