--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "url": "https://github.com/makingmerry/tool_bob/"
   },
   "license": "UNLICENSED",
-  "version": "2.0.14",
+  "version": "2.1.0",
   "babel": {
     "presets": [
       "es2015"
@@ -19,6 +19,12 @@
       "es6": true
     },
     "rules": {
+      "no-console": [
+        "warn",
+        {
+          "allow": ["warn", "error"]
+        }
+      ],
       "spaced-comment": [
         "error",
         "always",
@@ -43,6 +49,9 @@
         {
           "props": false
         }
+      ],
+      "class-methods-use-this": [
+        "off"
       ]
     }
   },
@@ -70,7 +79,7 @@
     "grunt-eslint": "^19.0.0",
     "grunt-php": "^1.5.1",
     "grunt-postcss": "^0.8.0",
-    "grunt-real-favicon": "^0.2.0",
+    "grunt-real-favicon": "^0.2.2",
     "grunt-svg-sprite": "^1.3.7",
     "grunt-svg2png": "^0.2.7",
     "pixrem": "^3.0.2"
