--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "type": "git",
     "url": "https://github.com/makingmerry/tool_bob/"
   },
-  "license": "UNLICENSED",
-  "version": "2.1.1",
+  "license": "MIT",
+  "version": "2.1.2",
   "babel": {
     "presets": [
       "es2015"
@@ -81,7 +81,7 @@
     "grunt-postcss": "^0.8.0",
     "grunt-real-favicon": "^0.2.2",
     "grunt-svg-sprite": "^1.3.7",
-    "grunt-svg2png": "^0.2.7",
+    "grunt-svg2png": "^0.2.8",
     "pixrem": "^3.0.2"
   }
 }
