--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "url": "https://github.com/makingmerry/tool_bob/"
   },
   "license": "MIT",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "babel": {
     "presets": [
       "es2015"
@@ -22,7 +22,10 @@
       "no-console": [
         "warn",
         {
-          "allow": ["warn", "error"]
+          "allow": [
+            "warn",
+            "error"
+          ]
         }
       ],
       "spaced-comment": [
