[2.2.0] update structure, enhanced with localised snippets loader helper.

--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,13 @@
 !*.php
 !*.html
 !snippets/
-snippets/*
-!snippets/*.php
-!snippets/*.html
 
 # track assets
 !assets/
 assets/*
+
+# track utilities
+!utilities/
 
 # track source image assets
 !assets/images/
