add icon, update gitignore config, update readme with spritesheet generation

--- a/.gitignore
+++ b/.gitignore
@@ -1,108 +1,3 @@
-# blanket blacklist
-/*
-
-# track templates and snippets
-!*.php
-!*.html
-!snippets/
-
-# track assets
-!assets/
-assets/*
-
-# track utilities
-!utilities/
-
-# track source image assets
-!assets/images/
-assets/images/*
-!assets/images/src/
-assets/images/src/*
-!assets/images/src/*.png
-!assets/images/src/*.jpg
-!assets/images/src/*.gif
-!assets/images/src/*.svg
-
-# track source favicon assets
-!assets/favicons/
-assets/favicons/*
-!assets/favicons/src/
-assets/favicons/src/*
-!assets/favicons/src/*.png
-!assets/favicons/src/*.ico
-
-# track source symbol assets
-!assets/symbols/
-assets/symbols/*
-!assets/symbols/src/
-assets/symbols/src/*
-!assets/symbols/src/*.svg
-
-# track source font assets
-!assets/fonts/
-assets/fonts/*
-!assets/fonts/*.woff
-!assets/fonts/*.woff2
-!assets/fonts/*.svg
-!assets/fonts/*.svgz
-!assets/fonts/*.eot
-!assets/fonts/*.otf
-!assets/fonts/*.ttf
-
-# track source sass assets
-!assets/sass/
-
-# track source javascript assets
-!assets/javascripts/
-assets/javascripts/*
-!assets/javascripts/src/
-assets/javascripts/src/*
-!assets/javascripts/src/*.js
-!assets/javascripts/src/*.json
-!assets/javascripts/src/lib/
-assets/javascripts/src/lib/*
-!assets/javascripts/src/lib/*.js
-!assets/javascripts/src/lib/*.json
-
-# ignore all files starting with . or ~
-.*
-~*
-
-# ignore OS generated files
-ehthumbs.db
-Thumbs.db
-Icon*
-
-# ignore log files and databases
-*.log
-*.sql
-*.sqlite
-
-# ignore compiled files
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
-
-# ignore packaged files
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
-
-# track configuration
-!package.json
-!package-lock.json
-!npm-shrinkwrap.json
-!Gruntfile.js
-!.gitignore
-!.gitkeep
-!.editorconfig
-!README.md
-!CHANGELOG.md
+node_modules/
+.sass_cache/
+build/
