--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "cssnano": "^4.1.10",
+    "eslint-config-prettier": "^6.4.0",
     "grunt": "^1.0.3",
     "grunt-babel": "^6.0.0",
     "grunt-browser-sync": "^2.2.0",
@@ -28,6 +29,7 @@
     "grunt-contrib-uglify": "^3.0.1",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-criticalcss": "^2.1.0",
+    "grunt-eslint": "^22.0.0",
     "grunt-php": "^1.5.1",
     "grunt-postcss": "^0.8.0",
     "grunt-real-favicon": "^0.2.2",
