--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "bob",
-  "description": "Framework and Grunt task-runner configuration for developing multi-page PHP websites.",
+  "name": "grunt-php-site",
+  "description": "Grunt taskrunner starter-kit for developing accessible and performant .php websites",
   "repository": {
     "type": "git",
-    "url": "https://github.com/makingmerry/tool_bob/"
+    "url": "https://github.com/makingmerry/grunt-php-site/"
   },
   "license": "MIT",
   "version": "2.2.0",
@@ -17,6 +17,7 @@
     "babel-preset-es2015": "^6.24.1",
     "cssnano": "^4.1.10",
     "eslint-config-prettier": "^6.4.0",
+    "fibers": "^4.0.1",
     "grunt": "^1.0.4",
     "grunt-babel": "^6.0.0",
     "grunt-browser-sync": "^2.2.0",
@@ -25,7 +26,6 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-imagemin": "^3.1.0",
     "grunt-contrib-nodeunit": "^2.0.0",
-    "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^3.0.1",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-criticalcss": "^2.1.0",
@@ -33,8 +33,11 @@
     "grunt-php": "^1.5.1",
     "grunt-postcss": "^0.8.0",
     "grunt-real-favicon": "^0.2.2",
+    "grunt-sass": "^3.1.0",
     "grunt-svg-sprite": "^1.3.7",
     "grunt-svg2png": "^0.2.8",
-    "pixrem": "^3.0.2"
+    "node-sass": "^4.12.0",
+    "pixrem": "^3.0.2",
+    "sass": "^1.23.0"
   }
 }
